# vue-options-to-composition

./: .editorconfig  Cargo.toml  LICENSE  README.md  config.example.toml
src/: lib.rs  main.rs
src/transformers/: assets.rs  axios.rs  composition.rs  emit.rs  filters.rs  head.rs  i18n.rs  import_rewrite.rs  mixin.rs  mod.rs  nuxt.rs  router.rs  vue2.rs  vuex.rs
tests/: integration_test.rs  nuxt_integration_test.rs  path_integration_test.rs  vue2_integration_test.rs  vuex_integration_test.rs
