[package]
name = "vue-options-to-composition"
version = "0.1.1"
edition = "2021"

[lib]
name = "vue_options_to_composition"
path = "src/lib.rs"

[[bin]]
name = "vue-options-to-composition"
path = "src/main.rs"

[dependencies]
lol_html = "2.4.0"
tree-sitter = "0.25.6"
tree-sitter-javascript = "0.23.1"
regex = "1.5"
lazy_static = "1.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
walkdir = "2.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
